--- a/client/components/status/index.css
+++ b/client/components/status/index.css
@@ -58,6 +58,7 @@
   font-weight: bold;
   color: #333;
 }
+.hidden{ display: none }
 @media screen and (min-width: 767px) and (max-width: 1000px) {
   .owisp-status-inner {
     width: 98%;
